# python-web-app-for-amplify-gen2

./: .gitignore  CLAUDE.md  DEPLOY.md  README.md  amplify.yml  package-lock.json  package.json  pyproject.toml
.claude/: settings.json
.github/workflows/: deploy.yml
amplify/: backend.ts
amplify/api/: .dockerignore  Dockerfile
amplify/api/src/: schemas.py
backend/: DOCKER.md  Dockerfile  pyproject.toml
backend/scripts/: __init__.py
backend/src/: main.py
backend/src/backend/: main.py
backend/src/backend/routers/: items.py  todos.py
frontend/: pyproject.toml
frontend/scripts/: __init__.py
frontend/src/: api_client.py  main.py
frontend/src/frontend/: main.py
frontend/src/frontend/services/: api_client.py
scripts/: run.py
shared/: pyproject.toml
shared/src/shared/: __init__.py  schemas.py
