[project]
name = "python-web-app"
version = "0.1.0"
description = "Flet frontend + FastAPI backend monorepo"
requires-python = ">=3.12"
dependencies = [
    "frontend",
    "backend",
]

[dependency-groups]
dev = [
    "ruff>=0.8.0",
    "ty>=0.0.1a26",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]

[project.scripts]
dev-frontend = "scripts.run:dev_frontend"
dev-frontend-desktop = "scripts.run:dev_frontend_desktop"
dev-backend = "scripts.run:dev_backend"
build-frontend = "scripts.run:build_frontend"
lint = "scripts.run:lint"
fix = "scripts.run:fix"
fmt = "scripts.run:format_code"
typecheck = "scripts.run:typecheck"
check = "scripts.run:check"

[tool.hatch.build.targets.wheel]
packages = ["scripts"]

[tool.uv.workspace]
members = ["shared", "frontend", "backend"]

[tool.uv.sources]
shared = { workspace = true }
frontend = { workspace = true }
backend = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# ty設定 - 高速型チェッカー
[tool.ty]
[tool.ty.environment]
python-version = "3.12"

[tool.ty.src]
exclude = [".venv/**"]

# Flet 1.0 Betaの型定義が不完全なため緩和
[[tool.ty.overrides]]
include = ["frontend/**"]
[tool.ty.overrides.rules]
invalid-argument-type = "ignore"
unknown-argument = "ignore"

# FastAPI/Starletteの型定義との互換性のため緩和
[[tool.ty.overrides]]
include = ["backend/**"]
[tool.ty.overrides.rules]
invalid-argument-type = "ignore"

# ruff設定
[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/**/*" = ["S101", "D"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
