[project]
name = "frontend"
version = "0.1.0"
description = "Flet CSR frontend"
requires-python = ">=3.12"
dependencies = [
    "flet[all]>=0.80.0",
    "httpx",
    "shared",
]

[tool.uv.sources]
shared = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
